--- a/.github/workflows/githubPagesBild.yaml
+++ b/.github/workflows/githubPagesBild.yaml
@@ -1,19 +1,18 @@
 name: Build and Deploy
 on: [push]
 jobs:
-  build-and-deploy:
+
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
-
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-        run: |
-          npm install
-          npm run build
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.3
-        with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: dist # The folder the action should deploy.
+    - uses: actions/checkout@v1
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.0.100
+    - name: Generate coverage report
+      run: |
+        cd ./Calculator.Teat/
+        dotnet test --collect:"XPlat Code Coverage"
+    
